// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Replaces single variable in linear-gradient 1`] = `
.c0 {
  background: linear-gradient(red 0%,blue 100%);
}

<div
  className="c0"
  end="blue"
  start="red"
/>
`;

exports[`Takes the color from props 1`] = `
.c0 {
  background-color: chocolate;
  color: red;
}

<div
  className="c0"
/>
`;

exports[`Use the color defiened in the component 1`] = `
.c0 {
  color: palevioletred;
}

<div
  className="c0"
/>
`;
